added an image of argentina typical foods in the main page. Andan ul element

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>odin recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/empanadas.html">Classic Beef Empanadas</a>
+    <h1>Odin Recipes (Argentinian recipes)</h1>
+    <img style="width: 800px; height: 450px;" src="argentinian-flag.webp" alt="argentinian flag with tipical food of the country">
+    <h2>Some tipical recipes of argentina</h2>
+    <ul>
+        <li>
+            <a href="recipes/empanadas.html">Classic Beef Empanadas</a>
+        </li>
+    </ul>
+    
 </body>
 </html>
