correcting spelling error in the alt attribute of the image element

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipes (Argentinian recipes)</h1>
-    <img style="width: 800px; height: 450px;" src="argentinian-flag.webp" alt="argentinian flag with tipical food of the country">
+    <img style="width: 800px; height: 450px;" src="argentinian-flag.webp" alt="argentinian flag with typical food of the country">
     <h2>Some tipical recipes of argentina</h2>
     <ul>
         <li>
             <a href="recipes/empanadas.html">Classic Beef Empanadas</a>
+        </li>
+        <li>
+            <a href="recipes/arg-style-ribs.html">Argentinian-Style Ribs</a>
         </li>
     </ul>
     
