added link to go chimichurri recipe page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>
             <a href="recipes/arg-style-ribs.html">Argentinian-Style Ribs</a>
         </li>
+        <li>
+            <a href="recipes/easy-chimichurri.html">Easy Chimichurri</a>
+        </li>
     </ul>
     
 </body>
